tests/baselines/reference/parserFunctionDeclaration2.d.errors.txt
parserFunctionDeclaration2.d.ts(1,1): error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
parserFunctionDeclaration2.d.ts(1,14): error TS1183: An implementation cannot be declared in ambient contexts.


==== parserFunctionDeclaration2.d.ts (2 errors) ====
    function F() {
    ~~~~~~~~
!!! error TS1046: Top-level declarations in .d.ts files must start with either a 'declare' or 'export' modifier.
                 ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }